--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
+	runtime("org.springframework.boot:spring-boot-devtools")
 }
 
 test {
