--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,17 @@ deploy:
           repo: hckim96/spring-webservice #Github 주소
           branch: master
       local_dir: deploy # before_deploy에서 생성한 디렉토리
+
+    - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: hckim-springboot-webservice-deploy # S3 버킷
+    key: springboot-webservice.zip # 빌드 파일을 압축해서 전달
+    bundle_type: zip
+    application: springboot-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: springboot-webservice-deploy-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
+    on:
+      repo: hckim96/spring-webservice
+      branch: master
