--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	}
 	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
 	runtime("org.springframework.boot:spring-boot-devtools")
+	compile("org.mariadb.jdbc:mariadb-java-client")
 }
 
 test {
