--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
     profiles:
         active: local # 기본 환경 선택
-
 # local 환경
 ---
 spring:
@@ -15,3 +14,16 @@ spring:
     h2:
         console:
             enabled: true
+---
+spring:
+    profiles: set1
+spring.profiles.include: real-db
+server:
+    port: 8081
+
+---
+spring:
+    profiles: set2
+spring.profiles.include: real-db
+server:
+    port: 8082
